[tool.poetry]
name = "execution_trace"
version = "1.0.0"
description = "A context manager for begin/end messages around tasks."
authors = ["Engelbert Tijskens <engelbert.tijskens@uantwerpen.be>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/etijskens/execution_trace"
homepage = "https://github.com/etijskens/execution_trace"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^4.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
#my-script = 'my_package:main'
